tests/NormalTests/paczka2/big_fuzzy/50155197.err
Error in line 5: pyuPMPr A204 80,7
Error in line 6: WCXzzBM S150 70,0
Error in line 17: pyuPMPr A221 47,0
Error in line 21: HdfO2Az3xSt A221 62,7
Error in line 18: pyuPMPr A204 29,8
Error in line 38: pyuPMPr S150 40,53
Error in line 45: M90xDM2k S150 85,51
Error in line 37: HdfO2Az3xSt S257 36,2
Error in line 41: M90xDM2k A221 227,1
Error in line 58: pyuPMPr A204 71,4
Error in line 53: S257 S150 40,1
Error in line 62: pyuPMPr S150 23,7
Error in line 71: 8FWH S257 76,7
Error in line 56: M90xDM2k S150 49,4
Error in line 81: HdfO2Az3xSt S150 84,9
Error in line 76: M90xDM2k A221 22,1
Error in line 91: lACV S257 18,8
Error in line 115: HdfO2Az3xSt A204 38,2
Error in line 137: M90xDM2k A221 93,7
Error in line 144: S257KA204K84,3
Error in line 123: 8FWH A204 59,0
Error in line 147: 8FWH S257 6,2
Error in line 145: lACV S150 11,7
Error in line 149: 8FWH A221 32,9
Error in line 146: S257 A204 90,2
Error in line 162: 8FWH S257 30,8
Error in line 167: 8FWH S150 36,98
Error in line 171: lACV Ass1 51,5
Error in line 165: 8FWH S150 37,9
Error in line 172: HdfO2Az3xSt S257 25,8
Error in line 177: HdfO2Az3xSt S150 49,6
Error in line 181: HdfO2Az3xSt A204 84,2
Error in line 150: lACV A221 22,4
Error in line 199: 8FWH A221 49,45
Error in line 205: 8FWH A221 146,0
Error in line 208: 8FWH S150 12,3
Error in line 209: pyuPMPr S257 25,4
Error in line 210: 8FWH A221 89,3
Error in line 220: HdfO2Az3xSt S150 9,9
Error in line 213: M90xDM2k S150 157,0
Error in line 227: M90xDM2k S257 86,4
Error in line 231: S257 A204 7,6
Error in line 242: M90xDM2k A221 0,3
Error in line 246: HdfO2Az3xSt A204 69,4
Error in line 236: lACV S257 63,7
Error in line 245: M90xDM2k A204 3,4
